# gpuvis_server

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists.txt  README.md  appveyor.yml  gpuvis_server.cppcheck
cli/: CMakeLists.txt  cli.cpp
docker/: build.sh  gpuvis_server.dockerfile  run.sh
docs/: doxyfile.in
server/: CmakeLists.txt  server.cpp
simulator/: CMakeLists.txt  CmakeLists.txt  main.cpp  output.h  parser.cpp  parser.h  simulator.h
simulator/lib/: lib.cpp  lib.h
simulator/src/: amdgpu_operations.h  gpuvis.h  main.cpp  output.h  parser.cpp  parser.h  program.cpp  program.h  simulator.cpp  simulator.h
simulator/src/decoders/: decoder.cpp  decoder.h
simulator/src/gpu/: gpu.cpp  gpu.h  gpu_helper.cpp  gpu_stats.cpp
simulator/src/isa/: fiji.h  isa.cpp  isa.h
tests/: CMakeLists.txt  test_example.cpp
tests/testresources/: Fiji_HelloWorld_helloworld.cl_isa.txt  gfx900_HelloWorld.isa.txt  gfx900_bitonic_sort_step_line_numbers.txt  gfx900_helloworld_4d33bf14-d510-4ef0-b9b8-a5e43b98584e.txt
webserver/: CMakeLists.txt  CmakeLists.txt  bridge.cpp  gpuvis.js  index.js  package-lock.json  package.json  rga.js  run_windows.bat.in  server.cpp
webserver/lib/mongoose/: mongoose.c  mongoose.h
webserver/static/: index.html
